# billie-crm

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml  server.js  start-http.sh  start.sh  vitest.config.mts  vitest.setup.ts
Requirements/: ARCHITECTURE.md  ENVIRONMENT_SETUP.md  IMPLEMENTATION_PLAN.md  USER_STORIES.md
bmad-custom-src/: custom.yaml
docs/: EVENT_SOURCING_ARCHITECTURE.md  api-contracts-billie-crm-web.md  architecture-billie-crm-web.md  architecture-event-processor.md  architecture.md  bmm-workflow-status.yaml  component-inventory-billie-crm-web.md  data-models-billie-crm-web.md  development-guide-billie-crm-web.md  development-guide-event-processor.md  epics.md  implementation-readiness-report-2025-12-11.md  index.md  integration-architecture.md  prd.md  project-overview.md  project-scan-report.json  project_context.md  source-tree-analysis.md  ux-design-directions.html  ux-design-specification.md
documents/: payload-cms-ux-best-practices.md
event-processor/: Dockerfile  README.md  pyproject.toml  requirements.txt
event-processor/src/billie_servicing/: __init__.py  config.py  main.py  processor.py
event-processor/src/billie_servicing/handlers/: __init__.py  account.py  conversation.py  customer.py  writeoff.py
event-processor/tests/: __init__.py  conftest.py  test_handlers.py  test_writeoff_handlers.py
proto/: accounting_ledger.proto
src/: payload-types.ts  payload.config.ts
tests/: run_unit_tests.sh
(+454 files in other folders)
