[tool.poetry]
name = "billie-servicing-processor"
version = "0.1.0"
description = "Event processor for Billie Servicing App - consumes events from Redis inbox and writes to MongoDB"
authors = ["Billie Engineering <engineering@billie.com.au>"]
readme = "README.md"
packages = [{include = "billie_servicing", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0"
motor = "^3.3"
pydantic = "^2.0"
pydantic-settings = "^2.0"
structlog = "^24.0"

# Billie Event SDKs - installed from GitHub
# Note: Requires GITHUB_TOKEN environment variable
billie-accounts-events = {git = "https://github.com/BillieLoans/billie-event-sdks.git", subdirectory = "packages/accounts", tag = "accounts-v2.2.0"}
billie-customers-events = {git = "https://github.com/BillieLoans/billie-event-sdks.git", subdirectory = "packages/customers", tag = "customers-v2.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.0"
ruff = "^0.4"
mypy = "^1.10"

[tool.poetry.scripts]
billie-servicing = "billie_servicing.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "C4", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true

